@@ -79,6 +79,11 @@ Core and Builtins
 Library
 -------
 
+- Issue #4772: Raise a ValueError when an unknown Bluetooth protocol is
+  specified, rather than fall through to AF_PACKET (in the `socket` module).
+  Also, raise ValueError rather than TypeError when an unknown TIPC address
+  type is specified.  Patch by Brian Curtin.
+
 - Issue #6939: Fix file I/O objects in the `io` module to keep the original
   file position when calling `truncate()`.  It would previously change the
   file position to the given argument, which goes against the tradition of
